# TFM_MLOps

./: .gitignore  README.md  environment.yml  mydb.sqlite  pyproject.toml
mlflow_project/mlruns/0/: meta.yaml
mlflow_project/mlruns/204212056556982198/: meta.yaml
mlflow_project/mlruns/228631906448072028/: meta.yaml
mlflow_project/mlruns/321637040070407721/: meta.yaml
mlflow_project/mlruns/439514969304710458/: meta.yaml
mlflow_project/mlruns/762156188927321016/: meta.yaml
mlflow_project/mlruns/879156620200438214/: meta.yaml
mlflow_project/src/: a.ipynb  available_features.csv  data_loading.ipynb  data_preprocessing.ipynb  evidently.ipynb  evidently.py  evidently_test.py  importer.py  main.py  model_serving.ipynb  modelling.ipynb  modelling.py  modelling_first_year.ipynb  preprocessing.ipynb  preprocessing.py  step.py  utils.py
mlflow_project/src/classes/: classifier_trainer.py  cleaner.py  drift_detector.py  feature_engineer.py  importer.py  intermediate_step.py  mlflow_manager.py  model_manager.py  pipeline.py  splitter.py  step.py  trainer.py  utils.py
mlflow_project/src/model_serving/: request_to_service.py
mlflow_project/src/to_delete/: importer_funcs.py
mlruns/.trash/319216438386290360/: meta.yaml
mlruns/.trash/321377681368833294/: meta.yaml
mlruns/.trash/593936887030231725/: meta.yaml
mlruns/0/: meta.yaml
mlruns/319216438386290360/: meta.yaml
mlruns/319216438386290360/9cb6982517fc4e0480c42ed1b3c8b676/: meta.yaml
mlruns/321377681368833294/: meta.yaml
mlruns/593936887030231725/: meta.yaml
notebooks/: data_loading.ipynb
src/: a.py
(+178 files in other folders)
