[tool.poetry]
name = "tfm-poetry"
version = "0.1.0"
description = ""
authors = ["Alejandro Prieto <alejandro.prieto@ailylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jupyter-client = "^8.1.0"
jupyter-core = "^5.3.0"
ipykernel = "^6.15.0"
ipython = "^8.12.0"
pandas = "^1.5.3"
mlflow = "^2.3.2"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
kaggle = "^1.5.13"
numpy = "^1.23.5"
imblearn = "*"
virtualenv = "*"
evidently = "^0.4.25"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
